--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,10 @@
 
   %body
     %h1.title Rotten Potatoes!
+    <%= button_to "New", new_user_path %>
+    # => "<form method="post" action="/users/new" class="button_to">
+    #      <input value="New" type="submit" />
+    #    </form>"
     #main
       - if flash[:notice]
         #notice.message= flash[:notice]
