--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
 
   %body
     %h1.title Rotten Potatoes!
-    <%= button_to "Signup", new_user %>
+    = button_to "Signup", new_user_path 
 
     #main
       - if flash[:notice]
