modified new.html.haml file for signing up

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -6,6 +6,6 @@
   = text_field :user_id, 'user_id'
 
   = label :user, :email, 'email'
-  = select :user, :email
+  = text_field :email, 'email'
 
   = submit_tag 'Save Changes'
